--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,24 +18,16 @@
                 android:id="@+id/text_view_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorTitleBackground"
-                android:padding="@dimen/movie_detail_title_padding"
-                android:paddingBottom="@dimen/movie_detail_title_padding_bottom"
-                android:paddingTop="@dimen/movie_detail_title_padding_top"
-                android:textColor="@color/colorTitleText"
-                android:textSize="@dimen/movie_detail_title_text"
+                style="@style/MovieTitleTextView"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/image_view_poster"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/movie_detail_poster_margin"
-                android:layout_marginLeft="@dimen/movie_detail_poster_margin_left"
-                android:layout_marginStart="@dimen/movie_detail_poster_margin_left"
+                style="@style/PosterDetailImageView"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_title"
-                android:contentDescription="@string/poster_image_description"/>
+                app:layout_constraintTop_toBottomOf="@id/text_view_title"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -51,15 +43,13 @@
                     android:id="@+id/text_view_release_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/movie_detail_margin"
-                    android:layout_marginTop="@dimen/movie_detail_margin"
-                    android:textSize="@dimen/movie_detail_release_date_text" />
+                    style="@style/ReleaseDateTextView"/>
 
                 <TextView
                     android:id="@+id/text_view_vote_average"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/movie_detail_vote_average_text"
+                    android:textSize="@dimen/movie_detail_text_small"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -69,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/movie_detail_overview_margin"
                 android:layout_marginTop="@dimen/movie_detail_overview_margin_top"
-                android:textSize="@dimen/movie_detail_overview_text"
+                android:textSize="@dimen/movie_detail_text_small"
                 app:layout_constraintTop_toBottomOf="@id/image_view_poster" />
 
         </android.support.constraint.ConstraintLayout>
