--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#00b3b3</color>
     <color name="colorTitleBackground">#00b3b3</color>
     <color name="colorTitleText">#FFFFFF</color>
+    <color name="colorDarkGrey">#a6a6a6</color>
 </resources>
