--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- General -->
+    <dimen name="separator_horizontal_line_margin">10dp</dimen>
+    <dimen name="separator_horizontal_line_height">1dip</dimen>
 
     <!-- Movies List -->
     <dimen name="error_display_padding">14dp</dimen>
@@ -23,4 +26,12 @@
 
     <dimen name="movie_detail_overview_margin">10dp</dimen>
     <dimen name="movie_detail_overview_margin_top">20dp</dimen>
+
+    <!-- Trailers List -->
+    <dimen name="trailers_section_padding_bottom">10dp</dimen>
+    <dimen name="trailers_list_title_text_size">20sp</dimen>
+    <dimen name="trailer_item_padding">8dp</dimen>
+    <dimen name="trailer_item_margin">15dp</dimen>
+    <dimen name="trailer_name_text_size">14sp</dimen>
+    <dimen name="trailer_item_height">30dp</dimen>
 </resources>
