--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,7 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_title" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_title"
+                android:contentDescription="@string/poster_image_description"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
