--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,8 +7,10 @@
     tools:context="com.jbielak.popularmovies.DetailActivity">
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view_movie_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
